hphp/hack/test/typecheck/ppl/extends_interface.php.exp
File "extends_interface.php", line 9, characters 11-20:
an interface must be annotated with <<__PPL>> to extend <<__PPL>> class: BaseInterface (Typing[4257])
File "extends_interface.php", line 6, characters 11-23:
Declaration is here
