hphp/hack/test/typecheck/ppl/extends_interface.php
<?hh // strict

// A ppl interface can only be extended by ppl classes

<<__PPL>>
interface BaseInterface {
}

interface ChildClass extends BaseInterface {
}
